Fix footnoterefs being overlapped by sticky header

--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body {
     max-width: 100%;
 }
 
+html {
+    scroll-padding-top: 1.5rem;
+}
+
 * {
     font-size: large;
 }
